k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-spring-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-spring-app
  template:
    metadata:
      labels:
        app: my-spring-app
    spec:
      containers:
        - name: my-spring-app
          image: 047719624346.dkr.ecr.ap-northeast-2.amazonaws.com/my-spring-app:latest
          ports:
            - containerPort: 8083
