k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/group.name: "my-app-ingress"  # ALB 그룹 지정 (선택)
    alb.ingress.kubernetes.io/healthcheck-path: "/health"
spec:
  rules:
    - host: cbnu.store  # 도메인 이름 (Route 53에서 CNAME 설정 필요)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-spring-service
                port:
                  number: 80  # Service의 port와 일치해야 함

    - host: www.cbnu.store  # ✅  www 도메인 추가
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-spring-service
                port:
                  number: 80
